# image-classifier

./: README.md  main.py  pyproject.toml
src/image_classifier/: __init__.py
