[project]
name = "image-classifier"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "katryo", email = "katoryo55@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
